--- a/analysis/simulation_seven_tissues_correlated.Rmd
+++ b/analysis/simulation_seven_tissues_correlated.Rmd
@@ -15,6 +15,7 @@ data <- lat[colnames(lat)%in%c("Artery_Aorta","Spleen","Skin_Not_Sun_Exposed_Sup
 colnames(data) <- c("Artery","Spleen","Skin","Lung","Adipose","Pancreas","Heart")
 rownames(data) <- c("Artery","Spleen","Skin","Lung","Adipose","Pancreas","Heart")
 data <- round(data,3)
+data
 ```
 
 It current has two settings:
