--- a/analysis/simulation_seven_tissues_correlated.Rmd
+++ b/analysis/simulation_seven_tissues_correlated.Rmd
@@ -12,8 +12,9 @@ A simulation of seven correlated tissues is conducted to evaluate cTWAS performa
 ```{r echo=FALSE}
 load("/project/xinhe/xsun/ctwas/1.matching_tissue/data/tissue_cor.rdata")
 data <- lat[colnames(lat)%in%c("Artery_Aorta","Spleen","Skin_Not_Sun_Exposed_Suprapubic","Lung","Adipose_Subcutaneous","Pancreas","Heart_Atrial_Appendage"),rownames(lat)%in%c("Artery_Aorta","Spleen","Skin_Not_Sun_Exposed_Suprapubic","Lung","Adipose_Subcutaneous","Pancreas","Heart_Atrial_Appendage")]
-colnames(data) <- c("Artery","Spleen","Skin","Lung","Adipose","Pancreas","Heart")
-rownames(data) <- c("Artery","Spleen","Skin","Lung","Adipose","Pancreas","Heart")
+c("Adipose","Lung","Artery","Heart","Skin","Spleen","Pancreas")
+colnames(data) <- c("Adipose","Lung","Artery","Heart","Skin","Spleen","Pancreas")
+rownames(data) <- c("Adipose","Lung","Artery","Heart","Skin","Spleen","Pancreas")
 data <- round(data,3)
 data
 ```
